<?xml version="1.0"?>
<package>
  <name>mosmach</name>
  <version>0.0.1</version>
  <description>mosmach: The MOnarCH SMACH</description>

  <maintainer email="pedro.x.s.mendes@gmail.com">Pedro Mendes</maintainer>

  <license>BSD</license>

  <author email="pedro.x.s.mendes@gmail.com">Pedro Mendes</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>smach</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>smach</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>actionlib</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
